go back to old jfree

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
       <resource>
         <directory>src/main/resources</directory>
         <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
           <include>app.properties</include>
           <include>jndi.properties</include>
           <include>logging.properties</include>
@@ -105,7 +111,7 @@
     <dependency>
       <groupId>org.jfree</groupId>
       <artifactId>jfreechart</artifactId>
-      <version>1.5.0</version>
+      <version>1.0.14</version>
     </dependency>
     <dependency>
       <groupId>org.jfree</groupId>
@@ -129,12 +135,10 @@
       <version>1.6</version>
     </dependency>
     -->
-    <!--
     <dependency>
       <groupId>org.jfree</groupId>
       <artifactId>jcommon</artifactId>
-      <version>1.0.24</version>
+      <version>1.0.17</version>
     </dependency>
-    -->
   </dependencies>
 </project>
